# aoc2024

./: .clang-format  CMakeLists.txt  day1.cpp  day1_2.cpp  day2.cpp  day2_2.cpp  day3.cpp  day3_2.cpp  day4.cpp  day4_2.cpp  day5.cpp  day5_2.cpp  day6.cpp  day6_2.cpp  day7.cpp  day7_2.cpp  day8.cpp
include/: day3in.h
