cmake_minimum_required(VERSION 3.28)

project(aoc2024)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(day1 day1.cpp)

add_executable(day1_2 day1_2.cpp)

add_executable(day2 day2.cpp)

add_executable(day2_2 day2_2.cpp)

add_executable(day3 day3.cpp)

add_executable(day3_2 day3_2.cpp)

add_executable(day4 day4.cpp)

add_executable(day4_2 day4_2.cpp)
